# flicker3

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  log.md  tree.dot
h/: ast.h  common.h  compiler.h  expr.h  lexer-adapter.h  lexer.h  param.h  parser.h  tree-export.h  type.h  util.h  vm.h
src/: analyzer.cpp  compiler.cpp  lexer.cpp  main.cpp  parser.cpp  tree-export.cpp  util.cpp  vm.cpp
src/antlr/: flicker.g4
src/grammar/: flicker.g4
src/script/: ast-spec.json  generate-ast.py  generate_ast.py  generate_expr.py
test/: adapter-test.cpp  bagel.fl  lexer-bench.cpp  lexer-test.cpp  parser-test.cpp
test/lexer/: comment.fl  identifier.fl  indent.fl  number.fl  numbers.fl  polymorphism.fl  string.fl  strings.fl
